# projetELE4205_Final

./: Doxyfile  README.md
client/: CMakeLists.txt  client.cpp  client.hpp
doc/html/: annotated.html  classes.html  client_8cpp.html  client_8cpp_source.html  client_8hpp.html  client_8hpp_source.html  dir_17f55879faed0b9076f8ff0589024ab5.html  dir_db3a54907829b36871118d03417739cd.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  serveur_8cpp.html  serveur_8cpp_source.html  serveur_8hpp.html  serveur_8hpp_source.html  structResolution-members.html  structResolution.html
doc/html/search/: all_62.js  all_63.js  all_65.js  all_66.js  all_6b.js  all_6c.js  all_6d.js  all_70.js  all_72.js  all_73.js  all_75.js  all_77.js  classes_72.js  defines_63.js  defines_66.js  defines_69.js  defines_6b.js  defines_6c.js  defines_6d.js  defines_70.js  defines_72.js  defines_73.js  defines_74.js  defines_75.js  files_63.js  files_73.js  functions_63.js  functions_66.js  functions_67.js  functions_6b.js  functions_6c.js  functions_6d.js  functions_70.js  functions_73.js  functions_75.js  search.js  variables_63.js  variables_64.js  variables_66.js  variables_68.js  (+3 more)
doc/latex/: annotated.tex  client_8cpp.tex  client_8hpp.tex  dir_17f55879faed0b9076f8ff0589024ab5.tex  dir_db3a54907829b36871118d03417739cd.tex  files.tex  index.tex  refman.tex  serveur_8cpp.tex  serveur_8hpp.tex  structResolution.tex
serv/: CMakeLists.txt  odroid-deploy-gdb.sh  serveur.cpp  serveur.hpp
